--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chronofall-miniapp",
-  "homepage": "https://babywetwipes.github.io/my-game",
+  "homepage": "https://zitraksMD.github.io/chronofall-miniapp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
